--- a/style.scss
+++ b/style.scss
@@ -37,15 +37,9 @@ $ProximaNova: "Proxima Nova";
     width: 1440px;
   }
 }
-
-@media (max-width: 375px) {
-  .wrapper {
-    width: 375px;
-  }
-}
 .wrapper {
-  margin: 0 auto;
-  width: 1440px;
+  margin: 0 auto;  
+  overflow: hidden;
 }
 /* --- HEADER ---*/
 .header {
@@ -1428,3 +1422,35 @@ $ProximaNova: "Proxima Nova";
 }
 
 /* --- END FOOTER ---*/
+
+
+@media (max-width: 375px) {
+  .wrapper {
+    width: 375px;
+  }
+  .home__menu,
+  .home__call,
+  .banner__social {
+    display: none;
+  }
+  .home {
+    padding: 0;
+  }
+  .banner {
+    height: 476px;
+    //padding: 85px 18px 61px 18px;
+  }
+  .banner__banner {
+    padding: 85px 18px 61px 18px;
+  }
+  .banner-title {
+    font-size: 23px;
+  }
+  .banner-promo {
+    font-size: 18px;
+  }
+  .btn {
+    width: 90%;
+  }
+  
+}
